<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/current_software_version"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textStyle="normal|bold"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:text="@string/version_1_0_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Custom2"
                android:textSize="15sp"
                android:textStyle="normal|bold"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:text="@string/development_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/cmpt_276_honeydew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/Custom2"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/publish_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/_2017_spring_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/Custom2"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/Custom2"
                android:textStyle="normal|bold"
                android:layout_marginTop="5dp" />

            <TextView
                android:text="@string/http_www_flaticon_com_packs_transport_27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:autoLink="web"
                android:textColorLink="@android:color/holo_blue_dark"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:autoLink="web"
                android:textColorLink="@android:color/holo_blue_dark"
                android:id="@+id/textView2"
                android:layout_marginTop="5dp"
                android:text="@string/http_www_flaticon_com_packs_multimedia_rounded_icons"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp" />

            <TextView
                android:text="@string/pictures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/Custom2"
                android:textStyle="normal|bold"
                android:layout_marginTop="5dp" />

            <TextView
                android:text="@string/http_grassdepartment_com_unityas_wp_content_uploads_2015_05_bg32_jpg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_orange_light"
                android:autoLink="web"
                android:textColorLink="@android:color/holo_blue_dark"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:text="@string/http_www_imgbase_info_images_safe_wallpapers_miscellaneous_8_bit_47432_8_bit_8_bit_cityscape_jpg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_orange_light"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:autoLink="web"
                android:textColorLink="@android:color/holo_blue_dark"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:text="@string/http_www_androidguys_com_2016_04_11_8_bit_wallpapers_youll_totally_want_for_your_android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorLink="@android:color/holo_blue_dark"
                android:autoLink="web"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/sfu_cs_homepage"
                android:textColor="@color/Custom2"
                android:textSize="14sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="5dp" />

            <TextView
                android:text="@string/https_www_sfu_ca_computing_html"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textColorLink="@android:color/holo_blue_dark"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>