<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmpt276.kenneyw.carbonfootprinttracker.ui.SelectCar"
    android:background="@drawable/image1">

    <TextView
        android:text="@string/list_of_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <Button
            android:text="@string/add_a_new_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/add_car_button_select_car"
            android:textStyle="normal|bold" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/carlist"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="140dp"
            android:background="@color/Custom" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/add_car_button_select_car"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/other_transportation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textStyle="normal|bold"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_above="@+id/linearLayout2"
                android:layout_alignLeft="@+id/carlist"
                android:layout_alignStart="@+id/carlist" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/skytrain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSkytrain"
                    android:layout_weight="1"
                    android:textStyle="normal|bold" />

                <Button
                    android:text="@string/walk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnWalk"
                    android:layout_weight="1"
                    android:textStyle="normal|bold" />

                <Button
                    android:text="@string/bike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bike_button"
                    android:layout_weight="1"
                    android:textStyle="normal|bold"/>

                <Button
                    android:text="@string/bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnBus"
                    android:layout_weight="1"
                    android:textStyle="normal|bold" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
