<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_route"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmpt276.kenneyw.carbonfootprinttracker.ui.AddRoute"
    android:background="@drawable/image1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/route_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt1_addroute"
                    android:layout_weight="1.70"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText_name_addroute"
                    android:hint="@string/nick_name_for_route"
                    android:layout_weight="0.74" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/highway_km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt3_addroute"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText_highway_addroute"
                    android:hint="@string/high_way_distance_in_km"
                    android:layout_weight="1.01" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/city_km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt2_addroute"
                    android:layout_weight="2.93"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText_city_addroute"
                    android:hint="@string/city_distance_in_km"
                    android:layout_weight="0.65" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_ok_addroute"
            android:textStyle="normal|bold"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/add_icon" />
    </RelativeLayout>

</RelativeLayout>
